# dragonbreath

./: .gitignore  .gitmodules  README.md  citations.bib  design.txt  hello.cpp  readme.txt
DragonBreath/: CMakeLists.txt
DragonBreath/include/: DragonBreath.h
DragonBreath/include/Components/: RigidBody.h  Transform.h
DragonBreath/include/Engine/: Commander.h  Commander.tpp  Component.h  ComponentArray.h  ComponentArray.tpp  ComponentManager.h  ComponentManager.tpp  Debug.h  Entity.h  EntityManager.h  Signature.h  System.h  SystemManager.h  SystemManager.tpp
DragonBreath/include/Math/: Quaternion.h  Vector3.h
DragonBreath/include/Systems/: Physics.h
DragonBreath/source/: DragonBreath.cpp
DragonBreath/source/Engine/: Commander.cpp  ComponentManager.cpp  Debug.cpp  EntityManager.cpp  System.cpp  SystemManager.cpp
DragonBreath/source/Math/: Quaternion.cpp  Vector3.cpp
DragonBreath/source/Systems/: Physics.cpp
docs/: 2024-02-17.txt  2024-02-18.txt  2024-02-29.txt  notes.txt  updates.txt
dragon-breath/: CMakeLists.txt
dragon-breath/include/: component_type.h  components.h  coordinator.h  entity_manager.h  prompter.h  signature.h
dragon-breath/src/: debug.cpp  entity_manager.cpp  main.cpp  prompter.cpp  vec3.cpp
dragonbreath/: CMakeLists.txt  commander.h
dragonbreath/docs/: CMakeLists.txt  readme.md  readme.txt
dragonbreath/include/: .component_array.h.swp  commander.h  commander.hpp  component.h  component_array.h  component_array.hpp  component_manager.h  component_manager.hpp  component_manager.tpp  debug.h  dragonbreath.h  entity.h  entity_manager.h  profile.h  signature.h  system.h  system_manager.h  system_manager.hpp  system_manager.tpp  vec3.h
dragonbreath/include/components/: rigidbody.h  transform.h
dragonbreath/include/engine/: commander.h  commander.tpp  component.h  component_array.h  component_array.tpp  component_manager.h  component_manager.tpp  debug.h  dragonbreath.h  entity.h  entity_manager.h  signature.h  system.h  system_manager.h  system_manager.tpp
dragonbreath/include/math/: vector3.h
dragonbreath/include/systems/: physics.h
dragonbreath/source/: commander.tpp  component_array.tpp  component_manager.tpp  debug.cpp  dragonbreath.cpp  entity_manager.cpp  main.cpp  system.cpp  system_manager.cpp  system_manager.tpp
dragonbreath/source/engine/: commander.cpp  component_manager.cpp  debug.cpp  entity_manager.cpp  main.cpp  system.cpp  system_manager.cpp
dragonbreath/source/math/: vector3.cpp
dragonbreath/src/: .system_manager.cpp.swp  entity_manager.cpp  main.cpp
dragonbreath/tests/include/: driver.h  entity_manager_driver.h  tests.h
dragonbreath/tests/source/: entity_manager_driver.cpp  main.cpp
include/: component_array.h  component_manager.h
log/: 2024-02-19.txt  2024-02-20.txt  2024-03-02.txt  2024-03-04.txt
src/: Entity.h  EntityManager.cpp  EntityManager.h  Makefile  component.h  component_array.cpp  component_array.h  component_manager.cpp  component_manager.h  coordinator.cpp  coordinator.h  debug.h  dragonbreath  entity.h  entity_manager.cpp  entity_manager.h  entitymanager.cpp  entitymanager.h  entitymgr.cpp  entitymgr.h  main.cpp  signature.h  system.h  system_manager.cpp  system_manager.h  window.cpp
src/window/: window.h
